manifests/argo/netpol-etcd-backup.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: etcd-backup
  namespace: argo
spec:
  endpointSelector:
    matchLabels:
      backup-workflow: "true"
  ingressDeny:
    - fromEntities:
        - world
  egress:
    - toEntities:
        - kube-apiserver
      toPorts:
        - ports:
            - port: "6443"
              protocol: TCP
            - port: "50000"
              protocol: TCP
    - toFQDNs:
        - matchPattern: "*.r2.cloudflarestorage.com"
        - matchName: "github.com"
        - matchPattern: "*.githubusercontent.com"
        - matchName: "dl-cdn.alpinelinux.org"
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: seaweedfs
            app.kubernetes.io/component: filer
            io.kubernetes.pod.namespace: seaweedfs
      toPorts:
        - ports:
            - port: "8333"
              protocol: TCP
